[package]
name = "eq-bridge"
version = "1.2.0"
authors = ["equilibrium"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
chainbridge = { path = "../chainbridge", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.123", optional = true }

# primitives
sp-core = { workspace = true }
sp-io = { workspace = true }
# polkadot dependencies
xcm = { workspace = true }
# frame dependencies
frame-support = { workspace = true }
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-whitelists = { path = "../eq-whitelists", default-features = false, optional = true }
eq-assets = { path = "../eq-assets", default-features = false }
eq-oracle = { path = "../eq-oracle", default-features = false, optional = true }
eq-balances = { path = "../eq-balances", default-features = false }

[dev-dependencies.eq-aggregates]
default-features = false
package = "eq-aggregates"
path = "../eq-aggregates"
version = "0.1.0"

[dev-dependencies.eq-oracle]
default-features = false
package = "eq-oracle"
path = "../eq-oracle"
version = "0.1.0"

[dev-dependencies.eq-whitelists]
default-features = false
package = "eq-whitelists"
path = "../eq-whitelists"
version = "0.1.0"


[features]
default = ["std"]
std = [
	"serde",
	"chainbridge/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"eq-primitives/std",
	"eq-balances/std",
	"eq-utils/std",
	"eq-oracle/std",
	# "eq-whitelists/std",
	"xcm/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"eq-oracle",
	"eq-whitelists",
]
try-runtime = [
  "frame-support/try-runtime",
]
