[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "eq-claim"
version = "0.1.0"
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
enumflags2 = {version = "0.6.2"}
libsecp256k1 = {version = "0.3.2", default-features = false, optional = true}
rustc-hex = {version = "2.0.1", default-features = false}
serde = { version = "1.0.188", default-features = false, features = ["alloc", "derive"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = {workspace = true}
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-assets = { path = "../eq-assets", default-features = false }
eq-balances = { path = "../eq-balances", default-features = false }
eq-vesting = { path = "../eq-vesting", default-features = false }
eq-aggregates = { path = "../eq-aggregates", default-features = false }

sp-io = { workspace = true }


#[dev-dependencies.eq-oracle]
#default-features = false
#package = "eq-oracle"
#path = "../eq-oracle"
#version = "0.1.0"


[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-storage]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies]
hex-literal = "0.3"
libsecp256k1 = "0.3.2"
serde_json = "1.0.41"
trie-db = "0.22.0"

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "libsecp256k1/hmac",
]
std = [
  "log/std",
  "serde/std",
  "codec/std",
  "rustc-hex/std",
  "sp-arithmetic/std",
  "sp-std/std",
  "sp-io/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "eq-balances/std",
  "eq-vesting/std",
  #"eq-oracle/std",
  "eq-utils/std",
  "eq-primitives/std",
  "eq-aggregates/std",
  "eq-assets/std"
]
production = []
try-runtime = [
  "frame-support/try-runtime",
]
