[package]
authors = ["equilibrium"]
name = "eq-dex"
version = "0.1.0"
edition = "2018"


[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
pallet-timestamp = { workspace = true }
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
safe-mix = {default-features = false, version = "1.0.0"}
serde = {version = "1.0.123", default-features = false, optional = true}
eq-rate = { package = "eq-rate", version = "0.1.0", path = "../eq-rate", default-features = false }
sp-application-crypto = { workspace = true }
either = {version = "1.6", default-features = false, features = []}
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = {workspace = true}
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-whitelists = { path = "../eq-whitelists", default-features = false, optional = true }
eq-assets = { path = "../eq-assets", default-features = false, optional=true }
eq-oracle = { path = "../eq-oracle", default-features = false, optional = true }
eq-balances = { path = "../eq-balances", default-features = false, optional = true }

sp-io = { workspace = true }

[dev-dependencies.eq-session-manager]
default-features = false
package = "eq-session-manager"
path = "../eq-session-manager"
version = "0.1.0"

[dev-dependencies.eq-margin-call]
default-features = false
package = "eq-margin-call"
path = "../eq-margin-call"
version = "0.1.0"

[dev-dependencies.eq-bailsman]
default-features = false
package = "eq-bailsman"
path = "../eq-bailsman"
version = "0.1.0"

[dev-dependencies.financial-primitives]
default-features = false
git = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet"
branch = "release-polkadot-v1.1.0"
package = "financial-primitives"
version = "0.1.0"

[dev-dependencies.financial-pallet]
default-features = false
git = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet"
branch = "release-polkadot-v1.1.0"
package = "financial-pallet"
version = "0.1.0"

[dev-dependencies.pallet-session]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"
package = "pallet-session"

[dev-dependencies.substrate-fixed]
git = "https://github.com/equilibrium-eosdt/substrate-fixed"
branch = "scale-info-2.0.1"
package = "substrate-fixed"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.authorship]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"
package = "pallet-authorship"

# Benchmarking dependencies

[dependencies.eq-subaccounts]
default-features = false
package = "eq-subaccounts"
path = "../eq-subaccounts"
version = "0.1.0"
optional = true


[features]
default = ["std"]
std = [
  "log/std",
  "serde",
  "sp-io/std",
  "sp-application-crypto/std",
  "codec/std",
  "frame-system/std",
  "frame-support/std",
  "safe-mix/std",
  "sp-std/std",
  "sp-arithmetic/std",
  "sp-runtime/std",
  "pallet-timestamp/std",
  "eq-primitives/std",
  "eq-utils/std",
  "eq-assets/std",
  "eq-rate/std",
  "eq-balances/std",
  "eq-oracle/std",
  "authorship/std",
]
test = [
  "pallet-session/std",
  "eq-session-manager/std",
  "eq-bailsman/std",
  "eq-margin-call/std",
  "financial-primitives/std",
  "financial-pallet/std",
  "substrate-fixed/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "eq-whitelists",
  "eq-subaccounts",
  "eq-oracle",
  "eq-assets",
  "eq-balances",
]
try-runtime = [
  "frame-support/try-runtime",
]
