[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "eq-distribution"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
log = "0.4.14"
safe-mix = {default-features = false, version = "1.0.0"}
serde = {version = "1.0.123", optional = true}
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = {workspace = true}
pallet-timestamp = { workspace = true }
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-whitelists = { path = "../eq-whitelists", default-features = false, optional = true }
eq-assets = { path = "../eq-assets", default-features = false }
eq-oracle = { path = "../eq-oracle", default-features = false, optional = true }
eq-balances = { path = "../eq-balances", default-features = false }

[dev-dependencies.pallet-collective]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.polkadot-primitives]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[features]
default = ["std"]
std = [
    "log/std",
    "serde",
    "codec/std",
    "frame-system/std",
    "frame-support/std",
    "safe-mix/std",
    "sp-std/std",
    "eq-balances/std",
    "sp-arithmetic/std",
    "sp-runtime/std",
    "pallet-timestamp/std",
    "eq-primitives/std",
    "eq-utils/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "eq-whitelists",
    "eq-oracle"
]
production = []
try-runtime = [
  "frame-support/try-runtime",
]
