[package]
authors = ["Equilibrium"]
edition = "2018"
name = "eq-lending"
version = "0.1.0"


[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
safe-mix = {default-features = false, version = "1.0.0"}
serde = {version = "1.0.123", optional = true}
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
substrate-fixed = { workspace = true }

frame-support = {workspace = true}
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-whitelists = { path = "../eq-whitelists", default-features = false, optional = true }
eq-assets = { path = "../eq-assets", default-features = false }
eq-oracle = { path = "../eq-oracle", default-features = false, optional = true }
eq-balances = { path = "../eq-balances", default-features = false }

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.eq-oracle]
default-features = false
package = "eq-oracle"
path = "../eq-oracle"
version = "0.1.0"

[dev-dependencies.eq-aggregates]
default-features = false
package = "eq-aggregates"
path = "../eq-aggregates"
version = "0.1.0"

[dev-dependencies.eq-bailsman]
default-features = false
package = "eq-bailsman"
path = "../eq-bailsman"
version = "0.1.0"

[dev-dependencies.test-utils]
default-features = false
package = "test-utils"
path = "../../test-utils"
version = "0.1.0"

[features]
default = ["std"]
std = [
  "log/std",
  "codec/std",
  "sp-core/std",
  "sp-io/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-arithmetic/std",
  "sp-std/std",
  "serde",
  "eq-primitives/std",
  "eq-balances/std",
  "eq-utils/std",
  "eq-assets/std",
  "eq-oracle/std",
  "eq-whitelists/std",
  "eq-bailsman/std",
  "eq-aggregates/std",
  "frame-benchmarking/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "eq-whitelists/runtime-benchmarks",
  "eq-primitives/runtime-benchmarks",
  "eq-oracle/runtime-benchmarks",
  "eq-assets/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
]
