[package]
authors = ["equilibrium"]
edition = "2018"
name = "eq-lockdrop"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={ workspace = true, optional = true }
frame-system = { workspace = true }
pallet-timestamp = { workspace = true, optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = {version = "1.0.123", optional = true}
sp-application-crypto = { workspace = true }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
# Polkadot dependencies
xcm = { workspace = true }
xcm-executor = { workspace = true }

frame-support = {workspace = true}
sp-io = { workspace = true }
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-whitelists = { path = "../eq-whitelists", default-features = false, optional = true }
eq-assets = { path = "../eq-assets", default-features = false }
eq-oracle = { path = "../eq-oracle", default-features = false, optional = true }
eq-balances = { path = "../eq-balances", default-features = false }
eq-rate = { path = "../eq-rate", default-features = false }

[dev-dependencies.eq-vesting]
default-features = false
package = "eq-vesting"
path = "../eq-vesting"
version = "0.1.0"

[dev-dependencies.test-utils]
default-features = false
package = "test-utils"
path = "../../test-utils"
version = "0.1.0"

[dev-dependencies.authorship]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"
package = "pallet-authorship"

[dev-dependencies.pallet-session]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"
package = "pallet-session"

[dev-dependencies.financial-primitives]
default-features = false
git = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet"
branch = "release-polkadot-v1.1.0"
package = "financial-primitives"
version = "0.1.0"

[dev-dependencies.financial-pallet]
default-features = false
git = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet"
branch = "release-polkadot-v1.1.0"
package = "financial-pallet"
version = "0.1.2"

[dev-dependencies.substrate-fixed]
git = "https://github.com/equilibrium-eosdt/substrate-fixed"
branch = "scale-info-2.0.1"
package = "substrate-fixed"

[dev-dependencies.eq-session-manager]
default-features = false
package = "eq-session-manager"
path = "../eq-session-manager"
version = "0.1.0"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[features]
default = ["std"]
std = [
  "log/std",
  "serde",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
  "sp-application-crypto/std",
  "eq-balances/std",
  "eq-rate/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "eq-vesting/std",
  "pallet-session/std",
  "pallet-timestamp/std",
  "substrate-fixed/std",
  "financial-primitives/std",
  "financial-pallet/std",
  "eq-session-manager/std",
  "eq-primitives/std",
]
test = [
  "eq-vesting/std",
  "pallet-session/std",
  "pallet-timestamp/std",
  "substrate-fixed/std",
  "financial-primitives/std",
  "financial-pallet/std",
  "eq-session-manager/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "pallet-timestamp/runtime-benchmarks",
  "eq-whitelists",
  "eq-oracle",
]
try-runtime = [
  "frame-support/try-runtime",
]
