[package]
authors=["equilibrium"]
name = "eq-margin-call"
version = "0.1.0"
edition = "2018"

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
safe-mix = {default-features = false, version = "1.0.0"}
serde = {version = "1.0.123", default-features = false, optional = true}
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
frame-support = {workspace = true}
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-whitelists = { path = "../eq-whitelists", default-features = false, optional = true }
eq-assets = { path = "../eq-assets", default-features = false }
eq-oracle = { path = "../eq-oracle", default-features = false, optional = true }
eq-balances = { path = "../eq-balances", default-features = false }
eq-vesting = { path = "../eq-vesting", default-features = false, optional = true }

[dev-dependencies.eq-bailsman]
default-features = false
package = "eq-bailsman"
path = "../eq-bailsman"
version = "0.1.0"

[dev-dependencies.financial-pallet]
default-features = false
git = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet"
branch = "release-polkadot-v1.1.0"
package = "financial-pallet"
version = "0.1.1"

[dev-dependencies.financial-primitives]
default-features = false
git = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet"
branch = "release-polkadot-v1.1.0"
package = "financial-primitives"
version = "0.1.0"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"








[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"



[dev-dependencies.substrate-fixed]
git = "https://github.com/equilibrium-eosdt/substrate-fixed"
branch = "scale-info-2.0.1"
package = "substrate-fixed"

[dev-dependencies.pallet-timestamp]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "safe-mix/std",
  "frame-system/std",
  "sp-std/std",
  "sp-runtime/std",
  "serde/std",
  "eq-utils/std",
  "eq-assets/std",
  "eq-primitives/std",
  "eq-balances/std",
  "sp-arithmetic/std",
  "eq-oracle/std",
]
test = [
  "eq-bailsman/std",
  "financial-pallet/std",
  "financial-primitives/std",
  "pallet-timestamp/std",
  "eq-assets/std",
]
production = []
runtime-benchmarks = [
  "frame-benchmarking",
  "eq-whitelists",
  "eq-vesting",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "eq-oracle",
]
try-runtime = [
  "frame-support/try-runtime",
]
