[package]
authors = ["equilibrium"]
name = "eq-market-maker"
version = "0.1.0"
edition = "2018"

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
frame-support = {workspace = true}
sp-io = { workspace = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-dex = { path = "../eq-dex", default-features = false }

[dependencies.codec]
package = "parity-scale-codec"
version = "3.0.0"
default-features = false
features = ["derive"]

[dependencies.serde]
version = "1.0.123"
optional = true

[dev-dependencies.sp-core]
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.test-utils]
default-features = false
package = "test-utils"
path = "../../test-utils"
version = "0.1.0"

[dev-dependencies.authorship]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"
package = "pallet-authorship"


[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "serde",
  "eq-utils/std",
  "eq-primitives/std",
  "eq-dex/std",
  "frame-benchmarking/std",
  "sp-arithmetic/std",
]
try-runtime = [
  "frame-support/try-runtime",
]
